<resources>
    <string name="app_name">Mobile Computing</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="signin">LOGIN</string>
    <string name="register">Register</string>
    <string name="confirm_password">confirm password</string>
    <string name="birthday">birthday</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_category">add category</string>
    <string name="add_item">add item</string>
    <string name="id">id</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="cat_id">cat id</string>
    <string name="search">search</string>
    <string name="cart">cart</string>
    <string name="title_activity_cart">Cart</string>
    <string name="confirm">confirm</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="quantity">quantity</string>
</resources>
